k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: support-app-service
spec:
  selector:
    app: support-app
  ports:
    - protocol: Tcp
      port: 80
      targetPort: 3000
  type: ClusterIP
